2002-04-15  Cristy  <cristy@mystic.es.dupont.com>
  * Fixed DrawImage() to properly handle affine image transforms.
  * Added AffineTransformImage() to C API.
  * Added -transform option to convert/mogrify program.

2002-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * magick/magick.c (MagickToMime): New method to return the MIME
    media type corresponding to a specified magick tag.

2002-04-12  Leonard Rosenthol  <leonardr@lazerware.com>
  * Fixed a bug in writing layer names in PSD files

2002-04-10  Cristy  <cristy@mystic.es.dupont.com>
  * Fixed PingImage() memory leak (thanks to Timo Vogel).
  * Added encoding and unicode attributes to PerlMagick (patch provided
    by Youki Kadobayashi).

2002-04-08  Cristy  <cristy@mystic.es.dupont.com>
  * Added reference counted blobs.
  * Added MagickFatalError() and SetFatalErrorHandler() to the C API.
  * One color images caused memory overwrite in QuantizeImage() (thanks
    to Vincent Broz).
  * Memory leak in NormalizeImage() (thanks to Vincent Broz).

2002-04-06  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
  *  Added CCIS-601 4:2:2 YUV format read-write support.
  *  Added CCIS-601 4:2:2 MPEG-2 format write support.
  *  Fixed a bug introduced in 5.4.0 that caused files with "M2V"
     suffix to be written in MPEG-1 instead of MPEG-2 format.

2002-03-28  Cristy  <cristy@mystic.es.dupont.com>
  * ImageToBlob() only returned the first frame of a multi-frame image.

2002-04-05  Leonard Rosenthol  <leonardr@lazerware.com>
  * Fixed inversion of colors when converting CMYk JPEG to PDF

2002-04-01  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Fixed TTF preview function.

2002-03-28  Cristy  <cristy@mystic.es.dupont.com>
  * DCM patches provided by Syam Gadde.
  * Multi-frame MPC image files caused a fault under Windows.
  * Copy entire comment from SVG (bug report from Bob Friesenhahn).
  * Enlarged scanline buffer for JPEG-compressed TIFF's (bug report from
    Bob Friesenhahn).
